tests/typing/fail/multipledef/threedefs.act
contract LValue

constructor()

creates

  uint x := 2
  bool x := false
  uint x := 3
